--- a/WPD micro-project/style1.css
+++ b/WPD micro-project/style1.css
@@ -4,7 +4,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 p {
-  line-height: 2.5; /* Adjust the line-height value to control spacing between lines */
+  line-height: 2.5; 
 }
 header {
   text-align: center;
