--- a/WPD micro-project/style.css
+++ b/WPD micro-project/style.css
@@ -4,7 +4,18 @@
   padding: 0;
 }
 
-body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, blockquote {
+body,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+blockquote {
   line-height: 1.6; /* Adjust the value as needed */
 }
 
@@ -100,11 +111,14 @@ main {
   text-align: justify;
 }
 
-.Beliefs {
+.coreb {
   display: flex;
+  justify-content: space-between;
+}
+.Beliefs {
+  flex-basis: 30%;
+  text-align: center;
   img {
-    display: flex;
-    display: inline-block;
     width: 50px;
     height: 50px;
   }
@@ -546,6 +560,7 @@ main {
 }
 
 footer {
+  width: 100%;
   background-color: gold;
   color: black;
 }
@@ -643,4 +658,7 @@ ul {
 a:hover {
   color: black;
   text-decoration: underline;
+}
+.ownrisk {
+  background-color: rgba(169, 169, 169, 0.276);
 }
